<?xml version="1.0"?>
<package format="2">
  <name>car_monitor</name>
  <version>0.0.0</version>
  <description>The car_monitor package</description>
  <maintainer email="wang@todo.todo">wang</maintainer>
  <license>TODO</license>

  <!-- 构建工具依赖 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- 基础ROS依赖 -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- 消息生成相关依赖 -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Qt相关依赖 -->
  <build_depend>qtbase5-dev</build_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-network</exec_depend>

  <!-- 其他系统依赖 -->
  <depend>boost</depend>

  <!-- 自定义消息依赖 -->
  <build_depend>autofleet</build_depend>
  <exec_depend>autofleet</exec_depend>

  <export>
  </export>
</package>

